# klang

./: .clang-format  .gitignore  CMakeLists.txt  getting-started.md  main.cpp  readme.md
.vscode.default/: launch.json  settings.json
cmake/: CreateASTBaseVisitorHeader.cmake  CreateASTNodesHeader.cmake  CreateASTTypesHeader.cmake  CreateASTVisitorHeader.cmake  DownloadAntlr4Jar.cmake  ExternalAntlr4Cpp.cmake  FindANTLR.cmake  add_compiled_tests_from_folder.cmake  add_grammar_tests_from_folder.cmake  add_tests_from_folder.cmake  create_symlink.cmake  find_all_k_files.cmake
grammar/: K.g4
include/: Bootstrap.h  BuiltInFunctions.h  KLangCommon.h  Tools.h
include/AST/: ASTCommon.h  ASTGenerator.h  ASTVisitor.h  TypeResolver.h
include/AST/Nodes/: ASTNode.h  AddNode.h  ArithInfixNode.h  AssertNode.h  AssignNode.h  BlockNode.h  BooleanInfixNode.h  BooleanLiteralNode.h  BreakNode.h  CondNode.h  ContinueNode.h  DeclNode.h  DivNode.h  EQNode.h  EqNode.h  FileNode.h  FunctionNode.h  GTENode.h  GTNode.h  IdentifierNode.h  InfixNode.h  IntegerLiteralNode.h  IntegralLiteralNode.h  LTENode.h  LTNode.h  LiteralNode.h  MulNode.h  NEQNode.h  NeqNode.h  Node.h  ReturnNode.h  SubNode.h  UnaryNode.h  WhileNode.h
include/AST/Types/: ASTType.h  BooleanType.h  FunctionType.h  IntegerType.h  IntegralType.h  StructuredType.h  Type.h
include/IR/: Context.h  IRContext.h  IRGenerator.h  IRSymbol.h
include/IR/Tools/: CondBuilder.h  ControlFlowTools.h  LoopBuilder.h
include/Symbols/: Symbol.h  SymbolScope.h  SymbolTable.h
scripts/: llvm_get.sh
source/: CMakeLists.txt  main.cpp
source/AST/: ASTGenerator.cpp  ASTVisitor.cpp  TypeResolver.cpp
source/AST/Nodes/: ASTNode.cpp  Node.cpp
source/IR/: IRGenerator.cpp
source/IR/Tools/: CondBuilder.cpp  LoopBuilder.cpp
testing/: CMakeLists.txt  readme.md
testing/include/: TestGrammar.h
testing/source/: GrammarVerifier.cpp  IsValidGrammar.cpp  TestGrammar.cpp
